tests/baselines/reference/moduleReopenedTypeSameBlock(strict=true).errors.txt
moduleReopenedTypeSameBlock.ts(4,32): error TS2322: Type 'null' is not assignable to type 'I'.


==== moduleReopenedTypeSameBlock.ts (1 errors) ====
    module M { export class C1 { } }
    module M {
        export interface I { n: number; }
        export class C2 { f(): I { return null; } }
                                   ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'I'.
    }
    